--- a/basecamp/index.html
+++ b/basecamp/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    google
+    <section id="fullPage" class="container">
+      <nav>
+        <ul class="navList">
+          <li class="listItems"><strong><a href="/">New Stuff</a></strong><br>New Basecamp features</li>
+          <li class="listItems"><strong><a href="#">Pricing</a></strong><br>Starts at $1/day</li>
+          <li class="listItems"><strong><a href="#">Free Two Month Trial</a></strong><br>Start using Basecamp today</li>
+        </ul>
+
+        <a href="/" class="logo"><img src="http://basecamp.com/assets/images/logo.png"></a>
+      </nav>
+
+      <header id="header" class="mainHeader">
+        <h1>Last week 5,896 companies signed up for Basecamp to manage their projects. Today it's your turn.
+        </h1>
+      </header>
+
+      <section id="canvas" class="drawing">
+        <aside class="oval-thought-border quote">I love turtles</aside>
+        <figure class="person"></figure>
+        <section class="signup">
+          <div class="formHeader">
+          <h2><strong>Start your free trial.</strong></h2>
+          <h3><strong>You'll be up and running in less than a minute.</strong></h3>
+          <p>Already have another Basecamp, Breeze, Highrise, Backpack, or Campfire account? Log in here and a new Basecamp trial will be added to your account.</p>
+          </div>
+          <input type="text" class="searchForm" value='Your full name'><br>
+          <input type="text" class="searchForm" value='Company or organization'><br>
+          <input type="text" class="searchForm" value='Email'><br>
+          <input type="text" class="searchForm" value='Password'><br>
+          <button class="signupButton">Start your two month free trial</button>
+        </section>
+      </section>
+
+
+    </section>
+
+
   </body>
 </html>
