google and basecamp completed

--- a/google/index2.html
+++ b/google/index2.html
@@ -8,27 +8,30 @@
 
     <div class="header">
       <ol class="header_contents">
-        <li>List Item</li>
-        <li>Longer List Item</li>
-        <li>Item</li>
-        <li>L</li>
-        <li>List Item</li>
-        <li>List Item</li>
+        <li>You +</li>
+        <li>Search</li>
+        <li>Images</li>
+        <li>Map</li>
+        <li>Play</li>
+        <li>YouTube</li>
+        <li>News</li>
+        <li>Gmail</li>
+        <li>Drive</li>
+        <li>Calendar</li>
+        <li>More</li>
       </ol>
     </div>
 
     <div class="main_container">
-
       <div class="logo"><img src="https://www.google.com/images/srpr/logo4w.png"></div>
-
-      <form>
-        <input type="text" class="searchForm" value="FILL ME IN"><br>
-        <button class="searchButtons">Google Search</button>
-        <button class="searchButtons">I'm Feeling Lucky</button>
-      </form>
-
-
+        <form>
+          <input type="text" class="searchForm"><br>
+          <button class="searchButtons">Google Search</button>
+          <button class="searchButtons">I'm Feeling Lucky</button>
+        </form>
     </div>
+
+    <div class="announcment">@marcus: <a href="#">Celebrate Pride with YouTube</a></div>
 
   </body>
 </html>
